--- a/bloks/intro/__text/intro__text.css
+++ b/bloks/intro/__text/intro__text.css
@@ -1,10 +1,16 @@
 .intro__text {
-    height: 208px;
-    width: 690px;
+    max-width: 690px;
     font-size: 16px;
     font-style: normal;
     font-weight: 400;
     line-height: 26px;
     letter-spacing: 0px;
     text-align: left;
+    margin: 0;
+}
+
+@media screen and (max-width: 320px) {
+    .intro__text {
+        max-width: 288px;
+    }
 }
