--- a/bloks/cover/__overlay/cover__overlay.css
+++ b/bloks/cover/__overlay/cover__overlay.css
@@ -3,17 +3,12 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    background: #2A2C2F;
-    opacity: 0.3;
+    background-color: rgba(42, 44, 47, 0.3);
     text-decoration: none;
     width: 100%;
     height: 100%;
-    /*
-    top: 0;
-    left: 0;
-    position: absolute;*/
 }
 
 .cover__overlay:hover {
-    opacity: 0.8;
+    background-color: rgba(42, 44, 47, 0.8);
 }
