--- a/bloks/cover/__subtitle/cover__subtitle.css
+++ b/bloks/cover/__subtitle/cover__subtitle.css
@@ -1,7 +1,6 @@
 .cover__subtitle {
-    height: 66px;
-    width: 360px;
-    color: #ffffff;
+    max-width: 360px;
+    color: #ffffffff;
     font-size: 18px;
     font-style: normal;
     font-weight: 400;
@@ -9,4 +8,14 @@
     letter-spacing: 0px;
     text-align: center;
     opacity: 1;
+    margin: 0;
+}
+
+@media all and (max-width: 320px) {
+    .cover__subtitle {
+        max-width: 288px;
+        font-size: 14px;
+        line-height: 16px;
+    }
+    
 }
