--- a/bloks/cover/__title/cover__title.css
+++ b/bloks/cover/__title/cover__title.css
@@ -1,7 +1,6 @@
 .cover__title {
-    height: 152px;
-    width: 560px;
-    color: #ffffff;
+    max-width: 560px;
+    color: #ffffffff;
     font-size: 72px;
     font-style: normal;
     font-weight: 900;
@@ -9,5 +8,16 @@
     letter-spacing: 0px;
     text-align: center;
     margin: 0;
+    padding-bottom: 32px;
     opacity: 1;
+}
+
+@media all and (max-width: 320px) {
+    .cover__title {
+        max-width: 288px;
+        font-size: 32px;
+        line-height: 35px;
+        padding-bottom: 16px;
+    }
+    
 }
