--- a/bloks/footer/__copyright/footer__copyright.css
+++ b/bloks/footer/__copyright/footer__copyright.css
@@ -5,4 +5,13 @@
     line-height: 16px;
     letter-spacing: 0px;
     text-align: right;
+    margin: 0;
+}
+
+@media all and (max-width: 320px) {
+    .footer__copyright {
+        text-align: left;
+        line-height: 14px;
+    }
+    
 }
