--- a/bloks/footer/__link/footer__link.css
+++ b/bloks/footer/__link/footer__link.css
@@ -5,7 +5,6 @@
     line-height: 18px;
     letter-spacing: 0px;
     text-align: left;
-    text-decoration: none;
     padding-right: 18px;
     color: #ffffff;
     margin: 0;
@@ -17,4 +16,14 @@
 
 .footer__link:last-child {
     padding-right: 0px;
+}
+
+@media all and (max-width: 320px) {
+    .footer__link {
+        padding-bottom: 32px;
+    }
+    .footer__link:last-child {
+        padding-bottom: 48px;
+    }
+    
 }
