--- a/bloks/footer/__links/footer__links.css
+++ b/bloks/footer/__links/footer__links.css
@@ -4,4 +4,13 @@
     justify-content: start;
     list-style-type: none;
     padding: 0px;
+    margin: 0;
+}
+
+@media all and (max-width: 320px) {
+    .footer__links {
+        display: flex;
+        flex-direction: column;
+    }
+    
 }
