--- a/bloks/footer/footer.css
+++ b/bloks/footer/footer.css
@@ -4,3 +4,18 @@
     flex-direction: row;
     justify-content: space-between;
 }
+
+@media all and (max-width: 768px) {
+    .footer {
+    padding: 90px 24px 24px 24px;
+    }
+}
+
+@media all and (max-width: 320px) {
+    .footer {
+        display: flex;
+        flex-direction: column;
+        padding: 64px 16px 24px;
+    }
+    
+}
