--- a/bloks/header/header.css
+++ b/bloks/header/header.css
@@ -6,6 +6,20 @@
     justify-content: space-between;
 }
 
-@media screen and (max-width: 1024px) {
-    padding-bottom: 56px;
+@media all and (max-width: 1024px) {
+    .header {
+        padding-bottom: 48px;
+    } 
+}
+
+@media all and (max-width: 768px) {
+    .header {
+        padding: 24px 28px 48px 28px;
+    } 
+}
+
+@media all and (max-width: 320px) {
+    .header {
+        padding: 16px 16px 48px 16px;
+    } 
 }
