--- a/bloks/intro/__list/intro__list.css
+++ b/bloks/intro/__list/intro__list.css
@@ -1,7 +1,6 @@
 .intro__list {
   list-style-type: none;
-  height: 90px;
-  width: 690px;
+  max-width: 690px;
   padding-top: 33px;
   font-size: 12px;
   font-style: normal;
@@ -11,4 +10,16 @@
   text-align: left;
   margin: 0;
  
+}
+
+@media screen and (max-width: 768px) {
+  .intro__list {
+  padding-left: 0px;
+  }
+}
+
+@media screen and (max-width: 320px) {
+  .intro__list {
+  padding-top: 34px;
+  }
 }
