--- a/bloks/intro/__title/intro__title.css
+++ b/bloks/intro/__title/intro__title.css
@@ -1,6 +1,5 @@
 .intro__title {
-    height: 58px;
-    width: 690px;
+    max-width: 690px;
     font-size: 54px;
     font-style: normal;
     font-weight: 900;
@@ -8,4 +7,13 @@
     letter-spacing: 0px;
     text-align: left;
     margin: 0;
+    padding-bottom: 40px;
+}
+
+@media screen and (max-width: 320px) {
+    .intro__title {
+        max-width: 288px;
+        font-size: 32px;
+        line-height: 35px;
+    }
 }
