--- a/bloks/intro/intro.css
+++ b/bloks/intro/intro.css
@@ -2,13 +2,26 @@
     display: flex;
     flex-direction: column;
     justify-content: start;
-    height: 429px;
     max-width: 690px;
     padding: 92px 442px 92px 148px;
-    /*border: 1px solid red;*/
 }
 
-@media screen and (max-width: 720px) {
+@media screen and (max-width: 1024px) {
+    .intro {
     padding: 92px 286px 92px 48px;
-    
+    }
+}
+
+@media screen and (max-width: 768px) {
+    .intro {
+        max-width: 720px;
+        padding: 88px 24px;
+    }
+}
+
+@media screen and (max-width: 320px) {
+    .intro {
+        max-width: 288px;
+        padding: 64px 16px;
+    }
 }
