--- a/bloks/lead/__caption/lead__caption.css
+++ b/bloks/lead/__caption/lead__caption.css
@@ -1,11 +1,23 @@
 .lead__caption {
-    padding-bottom: 8px;
-    height: 14px;
-    width: 158px;
+    padding-top: 8px;
     font-size: 10px;
     font-style: normal;
     font-weight: 400;
     line-height: 14px;
     letter-spacing: 1.5px;
     text-align: left;
+    text-transform: uppercase;
+    margin: 0;
+}
+
+@media all and (max-width: 768px) {
+    .lead {
+        text-indent: 24px;    
+    }
+}
+
+@media all and (max-width: 768px) {
+    .lead {
+        text-indent: 16px;  
+    }
 }
