--- a/bloks/lead/__image/lead__image.css
+++ b/bloks/lead/__image/lead__image.css
@@ -2,3 +2,15 @@
     max-height: 615px;
     max-width: 984px;
 }
+
+@media all and (max-width: 768px) {
+    .lead__image {
+        max-width: 768px;
+    }
+}
+
+@media all and (max-width: 320px) {
+    .lead__image {
+        max-width: 320px;
+    }
+}
