--- a/bloks/lead/__subtitle/lead__subtitle.css
+++ b/bloks/lead/__subtitle/lead__subtitle.css
@@ -1,6 +1,5 @@
 .lead__subtitle {
-    height: 72px;
-    width: 640px;
+    max-width: 640px;
     margin: 32px auto 64px;
     font-size: 30px;
     font-style: normal;
@@ -8,4 +7,12 @@
     line-height: 36px;
     letter-spacing: 0px;
     text-align: center;
+}
+
+@media all and (max-width: 320px) {
+    .lead__subtitle {
+        font-size: 16px;
+        line-height: 20px;
+        margin: 16px 16px 40px;
+    }
 }
