--- a/bloks/lead/__title/lead__title.css
+++ b/bloks/lead/__title/lead__title.css
@@ -5,7 +5,13 @@
     line-height: 100px;
     letter-spacing: 0px;
     text-align: center;
-    height: 200px;
-    width: 720px;
+    max-width: 720px;
     margin: 0 auto;
+}
+
+@media all and (max-width: 320px) {
+    .lead__title {
+        font-size: 40px;
+        line-height: 44px;
+    }
 }
