--- a/bloks/photo-grid/photo-grid.css
+++ b/bloks/photo-grid/photo-grid.css
@@ -7,6 +7,41 @@
     grid-template-rows: repeat(3, 1fr);
     grid-row-gap: 16px;
     grid-column-gap: 16px;
-    padding: 0px 48px;
-    max-width: calc(100vw - 96px);
+    max-width: 1184px;
+    margin: 0 auto;
+}
+
+@media all and (max-width: 1024px) {
+    .photo-grid {
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+        grid-template-rows: repeat(4, 1fr);
+        grid-row-gap: 14px;
+        grid-column-gap: 14px;
+        max-width: 928px;
+    }
+    
+}
+
+@media all and (max-width: 768px) {
+    .photo-grid {
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        grid-template-rows: repeat(6, 1fr);
+        grid-row-gap: 16px;
+        grid-column-gap: 16px;
+        max-width: 720px;
+    }
+    
+}
+
+@media all and (max-width: 320px) {
+    .photo-grid {
+        display: grid;
+        grid-template-columns: repeat(1, 1fr);
+        grid-template-rows: repeat(12, 1fr);
+        grid-row-gap: 16px;
+        max-width: 288px;
+    }
+    
 }
