--- a/bloks/place/__image/place__image.css
+++ b/bloks/place/__image/place__image.css
@@ -1,3 +1,21 @@
 .place__image {
     max-width: 460px;
 }
+
+@media all and (max-width: 1024px) {
+    .place__image {
+    max-width: 440px;
+    }
+}
+
+@media all and (max-width: 768px) {
+    .place__image {
+    max-width: 340px;
+    }
+}
+
+@media all and (max-width: 320px) {
+    .place__image {
+    max-width: 320px;
+    }
+}
