--- a/bloks/place/__paragraph/place__paragraph.css
+++ b/bloks/place/__paragraph/place__paragraph.css
@@ -13,3 +13,30 @@
 .place__paragraph:last-child {
     padding-bottom: 0px;
 }
+
+@media all and (max-width: 1024px) {
+    .place__paragraph {
+    max-width: 456px;
+    }
+}
+
+@media all and (max-width: 768px) {
+    .place__paragraph {
+        max-width: 352px;
+        padding-bottom: 25px;
+        font-size: 16px;
+        line-height: 26px;
+    }
+}
+
+@media all and (max-width: 320px) {
+    .place__paragraph {
+        min-width: 288px;
+        font-size: 16px;
+        line-height: 26px;
+        padding-left: 16px;
+        padding-right: 16px;
+        
+    }
+    
+}
