--- a/bloks/place/__title/place__title.css
+++ b/bloks/place/__title/place__title.css
@@ -8,3 +8,27 @@
     text-align: left;
     margin: 0;
 }
+
+@media all and (max-width: 1024px) {
+    .place__title {
+        max-width: 440px;
+    }
+    
+}
+
+@media all and (max-width: 768px) {
+    .place__title {
+        max-width: 340px;
+        font-size: 42px;
+        line-height: 46px;
+    }
+}
+
+@media all and (max-width: 320px) {
+    .place__title {
+        max-width: 288px;
+        font-size: 32px;
+        line-height: 35px;
+        padding: 0px 16px;
+    }
+}
