--- a/bloks/place/place.css
+++ b/bloks/place/place.css
@@ -10,3 +10,27 @@
 .place:last-child {
     padding-bottom: 0px;
 }
+
+@media all and (max-width: 1024px) {
+    .place {
+        grid-column-gap: 32px;
+    }
+    
+}
+
+@media all and (max-width: 768px) {
+    .place {
+        grid-column-gap: 28px;
+        padding-bottom: 73px;
+    }
+    
+}
+
+@media all and (max-width: 320px) {
+    .place {
+        display: grid;
+        grid-template-columns: repeat(1, minmax(min-content, max-content));
+        grid-row-gap: 32px;
+        padding-bottom: 50px;
+    } 
+}
