--- a/bloks/places/places.css
+++ b/bloks/places/places.css
@@ -1,5 +1,28 @@
 .places {
-    /*max-width: calc(100vw - 296px);*/
     max-width: 984px;
-    padding: 92px 148px 0px 148px;
+    padding: 92px 148px 92px 148px;
+}
+
+@media all and (max-width: 1024px) {
+    .places {
+        max-width: 928px;
+        padding: 92px 48px 92px 48px;
+    }
+    
+}
+
+@media all and (max-width: 768px) {
+    .places {
+        max-width: 720px;
+        padding: 88px 24px 90px 24px;
+    }
+    
+}
+
+@media all and (max-width: 320px) {
+    .places {
+        max-width: 320px;
+        padding: 64px 0px 66px;
+    }
+    
 }
