--- a/bloks/footer/__link/footer__link.css
+++ b/bloks/footer/__link/footer__link.css
@@ -8,22 +8,31 @@
     padding-right: 18px;
     color: #ffffff;
     margin: 0;
+    text-decoration: none;
 }
 
 .footer__link:hover{
     opacity: 0.8;
+    transition: 1.5s;
 }
 
 .footer__link:last-child {
     padding-right: 0px;
 }
 
-@media all and (max-width: 320px) {
+@media all and (max-width: 700px) {
     .footer__link {
-        padding-bottom: 32px;
+        font-size: 14px;
+        line-height: 16px;
+        padding-right: 8px;
     }
-    .footer__link:last-child {
-        padding-bottom: 48px;
+    
+}
+
+@media all and (max-width: 620px) {
+    .footer__link {
+        font-size: 24px;
+        line-height: 24px;
     }
     
 }
