--- a/bloks/cover/__overlay/cover__overlay.css
+++ b/bloks/cover/__overlay/cover__overlay.css
@@ -5,10 +5,30 @@
     align-items: center;
     background-color: rgba(42, 44, 47, 0.3);
     text-decoration: none;
-    width: 100%;
-    height: 100%;
+    max-height: 100%;
+    max-width: 100%;
+    padding: 20.693% 26.352%;
 }
 
 .cover__overlay:hover {
     background-color: rgba(42, 44, 47, 0.8);
+    transition: 2s;
+}
+
+@media all and (max-width: 1024px) {
+    .cover__overlay {
+    padding: 19.05% 22.66%;
+    }
+}
+
+@media all and (max-width: 768px) {
+    .cover__overlay {
+    padding: 15% 13.55%;
+    }
+}
+
+@media all and (max-width: 320px) {
+    .cover__overlay {
+    padding: 10.35% 5%;
+    }
 }
