--- a/bloks/cover/__subtitle/cover__subtitle.css
+++ b/bloks/cover/__subtitle/cover__subtitle.css
@@ -11,6 +11,13 @@
     margin: 0;
 }
 
+@media screen and (max-width: 520px) {
+    .cover__subtitle {
+        font-size: 16px;
+        line-height: 18px;
+    }
+}
+
 @media all and (max-width: 320px) {
     .cover__subtitle {
         max-width: 288px;
