--- a/bloks/cover/__title/cover__title.css
+++ b/bloks/cover/__title/cover__title.css
@@ -12,6 +12,13 @@
     opacity: 1;
 }
 
+@media screen and (max-width: 520px) {
+    .cover__title {
+        font-size: 44px;
+        line-height: 46px;
+    }
+}
+
 @media all and (max-width: 320px) {
     .cover__title {
         max-width: 288px;
