--- a/bloks/cover/cover.css
+++ b/bloks/cover/cover.css
@@ -1,28 +1,16 @@
 .cover {
-    height: 740px;
     max-width: 1184px;
     margin: 0px auto;
     background-image: url(../../images/__background.jpg);
-    background-size: cover;
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: center;
+    overflow: hidden;
+    
 }
 
 @media all and (max-width: 1024px) {
     .cover {
-    max-width: 1024px;
-    height: 640px;
-    }
-}
-
-@media all and (max-width: 768px) {
-    .cover {
-    max-width: 768px;
-    height: 480px;
-    }
-}
-
-@media all and (max-width: 320px) {
-    .cover {
-    max-width: 320px;
-    height: 200px;
+    max-width: 100vw;
     }
 }
