--- a/bloks/header/__lang-link/header__lang-link.css
+++ b/bloks/header/__lang-link/header__lang-link.css
@@ -5,6 +5,21 @@
     font-style: normal;
     color: #fff;
     padding-top: 18px;
+    text-decoration: none;
+    padding-right: 18px;
+}
+
+.header__lang-link:last-child {
+    padding-right: 0px;
+}
+
+@media all and (max-width: 520px) {
+    .header__lang-link {
+        font-size: 20px;
+        line-height: 22px;
+        padding-top: 16px;
+    }
+    
 }
 
 @media all and (max-width: 320px) {
