--- a/bloks/header/__logo/header__logo.css
+++ b/bloks/header/__logo/header__logo.css
@@ -3,6 +3,14 @@
     height: 52px;
 }
 
+@media all and (max-width: 520px) {
+    .header__logo {
+        width: 150px;
+        height: 44px;
+    }
+    
+}
+
 @media all and (max-width: 320px) {
     .header__logo {
         width: 142px;
