--- a/bloks/header/header.css
+++ b/bloks/header/header.css
@@ -1,25 +1,34 @@
 .header {
-    max-width: 100%;
-    padding: 28px 48px 56px 48px;
-    height: 52px;
+    max-width: 1184px;
+    margin: 0 auto;
+    padding: 28px 0px 56px;
     display: flex;
     justify-content: space-between;
 }
 
 @media all and (max-width: 1024px) {
     .header {
+        max-width: 928px;
         padding-bottom: 48px;
     } 
 }
 
 @media all and (max-width: 768px) {
     .header {
-        padding: 24px 28px 48px 28px;
+        max-width: 92.71vw;
+        padding: 24px 0px 48px;
+    } 
+}
+
+@media all and (max-width: 700px) {
+    .header {
+        max-width: 94.28vw;
     } 
 }
 
 @media all and (max-width: 320px) {
     .header {
-        padding: 16px 16px 48px 16px;
+        max-width: 288px;
+        padding: 16px 0px 48px;
     } 
 }
