--- a/bloks/intro/__list/intro__list.css
+++ b/bloks/intro/__list/intro__list.css
@@ -9,14 +9,10 @@
   letter-spacing: 0px;
   text-align: left;
   margin: 0;
- 
+  padding-left: 0;
+  font-weight: 700;
 }
 
-@media screen and (max-width: 768px) {
-  .intro__list {
-  padding-left: 0px;
-  }
-}
 
 @media screen and (max-width: 320px) {
   .intro__list {
