--- a/bloks/intro/__title/intro__title.css
+++ b/bloks/intro/__title/intro__title.css
@@ -10,6 +10,20 @@
     padding-bottom: 40px;
 }
 
+@media screen and (max-width: 700px) {
+    .intro__title {
+        font-size: 44px;
+        line-height: 48px;
+    }
+}
+
+@media screen and (max-width: 520px) {
+    .intro__title {
+        font-size: 38px;
+        line-height: 40px;
+    }
+}
+
 @media screen and (max-width: 320px) {
     .intro__title {
         max-width: 288px;
