--- a/bloks/intro/intro.css
+++ b/bloks/intro/intro.css
@@ -2,26 +2,33 @@
     display: flex;
     flex-direction: column;
     justify-content: start;
-    max-width: 690px;
-    padding: 92px 442px 92px 148px;
+    max-width: 984px;
+    padding: 92px 0px;
+    margin: 0 auto;
 }
 
-@media screen and (max-width: 1024px) {
+@media all and (max-width: 1024px) {
     .intro {
-    padding: 92px 286px 92px 48px;
+        max-width: 928px;
     }
 }
 
-@media screen and (max-width: 768px) {
+@media all and (max-width: 768px) {
     .intro {
-        max-width: 720px;
-        padding: 88px 24px;
+        max-width: 93.75vw;
+        padding: 88px 0px;
     }
 }
 
-@media screen and (max-width: 320px) {
+@media all and (max-width: 700px) {
+    .intro {
+        max-width: 96vw;
+    }
+}
+
+@media all and (max-width: 320px) {
     .intro {
         max-width: 288px;
-        padding: 64px 16px;
+        padding: 64px 0px;
     }
 }
