--- a/bloks/lead/__subtitle/lead__subtitle.css
+++ b/bloks/lead/__subtitle/lead__subtitle.css
@@ -9,10 +9,26 @@
     text-align: center;
 }
 
+@media all and (max-width: 700px) {
+    .lead__subtitle {
+        max-width: 600px;
+        font-size: 26px;
+        line-height: 30px;
+    }
+}
+
+@media all and (max-width: 520px) {
+    .lead__subtitle {
+        max-width: 500px;
+        font-size: 20px;
+        line-height: 34px;
+        margin: 22px auto 48px ;
+    }
+}
 @media all and (max-width: 320px) {
     .lead__subtitle {
         font-size: 16px;
         line-height: 20px;
-        margin: 16px 16px 40px;
+        margin: 16px auto 40px;
     }
 }
