--- a/bloks/lead/__title/lead__title.css
+++ b/bloks/lead/__title/lead__title.css
@@ -9,6 +9,21 @@
     margin: 0 auto;
 }
 
+@media all and (max-width: 700px) {
+    .lead__title {
+        font-size: 70px;
+        line-height: 74px;
+    }
+}
+
+@media all and (max-width: 520px) {
+    .lead__title {
+        font-size: 44px;
+        line-height: 46px;
+    }
+}
+
+
 @media all and (max-width: 320px) {
     .lead__title {
         font-size: 40px;
