--- a/bloks/lead/lead.css
+++ b/bloks/lead/lead.css
@@ -4,20 +4,18 @@
     justify-content: center;
     max-height: 1005px;
     max-width: 984px;
-    padding: 0px 148px;
+    margin: 0 auto;
 }
 
 @media all and (max-width: 1024px) {
     .lead {
         max-width: 928px;
-        padding: 0px 48px;
     }
 }
 
 @media all and (max-width: 768px) {
     .lead {
         max-width: 768px;
-        padding: 0px;
     }
 }
 
