--- a/bloks/page/page.css
+++ b/bloks/page/page.css
@@ -2,5 +2,7 @@
     background-color: #2A2C2F;
     font-family: 'Inter', 'Arial', sans-serif;
     max-width: 1280px;
+    min-width: 320px;
     color: #fff;
+    margin: 0 auto;
 }
