--- a/bloks/photo-grid/photo-grid.css
+++ b/bloks/photo-grid/photo-grid.css
@@ -9,11 +9,11 @@
     grid-column-gap: 16px;
     max-width: 1184px;
     margin: 0 auto;
+    list-style-type: none;
 }
 
 @media all and (max-width: 1024px) {
     .photo-grid {
-        display: grid;
         grid-template-columns: repeat(3, 1fr);
         grid-template-rows: repeat(4, 1fr);
         grid-row-gap: 14px;
@@ -25,22 +25,32 @@
 
 @media all and (max-width: 768px) {
     .photo-grid {
-        display: grid;
         grid-template-columns: repeat(2, 1fr);
         grid-template-rows: repeat(6, 1fr);
         grid-row-gap: 16px;
         grid-column-gap: 16px;
-        max-width: 720px;
+        max-width: 93.75vw;
     }
     
 }
 
-@media all and (max-width: 320px) {
+@media all and (max-width: 700px) {
     .photo-grid {
-        display: grid;
+        max-width: 96vw;
+    }
+    
+}
+
+@media all and (max-width: 520px) {
+    .photo-grid {
         grid-template-columns: repeat(1, 1fr);
         grid-template-rows: repeat(12, 1fr);
-        grid-row-gap: 16px;
+        max-width: 92.3vw;
+    }
+    
+}
+@media all and (max-width: 320px) {
+    .photo-grid {
         max-width: 288px;
     }
     
