--- a/bloks/place/__image/place__image.css
+++ b/bloks/place/__image/place__image.css
@@ -10,12 +10,24 @@
 
 @media all and (max-width: 768px) {
     .place__image {
-    max-width: 340px;
+    max-width: 44.27vw;
+    }
+}
+
+@media all and (max-width: 700px) {
+    .place__image {
+    max-width: 45.71vw;
+    }
+}
+
+@media all and (max-width: 520px) {
+    .place__image {
+    max-width: 96vw;
     }
 }
 
 @media all and (max-width: 320px) {
     .place__image {
-    max-width: 320px;
+    max-width: 100vw;
     }
 }
