--- a/bloks/place/__paragraph/place__paragraph.css
+++ b/bloks/place/__paragraph/place__paragraph.css
@@ -1,5 +1,4 @@
 .place__paragraph {
-    max-width: 484px;
     font-size: 18px;
     font-style: normal;
     font-weight: 400;
@@ -29,11 +28,16 @@
     }
 }
 
+@media all and (max-width: 520px) {
+    .place__paragraph {
+        max-width: 96vw;
+    }
+    
+}
+
 @media all and (max-width: 320px) {
     .place__paragraph {
         min-width: 288px;
-        font-size: 16px;
-        line-height: 26px;
         padding-left: 16px;
         padding-right: 16px;
         
