--- a/bloks/place/__title/place__title.css
+++ b/bloks/place/__title/place__title.css
@@ -18,11 +18,28 @@
 
 @media all and (max-width: 768px) {
     .place__title {
-        max-width: 340px;
+        max-width: 44.27vw;
         font-size: 42px;
         line-height: 46px;
     }
 }
+
+@media all and (max-width: 700px) {
+    .place__title {
+        max-width: 45.71vw;
+        font-size: 40px;
+        line-height: 44px;
+    }
+}
+
+@media screen and (max-width: 520px) {
+    .place__title {
+        font-size: 36px;
+        line-height: 38px;
+        max-width: 96vw;
+    }
+}
+
 
 @media all and (max-width: 320px) {
     .place__title {
