--- a/bloks/place/__website/place__website.css
+++ b/bloks/place/__website/place__website.css
@@ -12,10 +12,16 @@
     
 }
 
+@media all and (max-width: 520px) {
+    .place__website {
+        max-width: 96vw;
+    }
+    
+}
+
 @media all and (max-width: 320px) {
     .place__website {
         max-width: 288px;
-        height: 46px;
         padding-left: 16px;
         padding-right: 16px;
     }
