--- a/bloks/place/place.css
+++ b/bloks/place/place.css
@@ -26,9 +26,15 @@
     
 }
 
-@media all and (max-width: 320px) {
+@media all and (max-width: 700px) {
     .place {
-        display: grid;
+        grid-column-gap: 20px;
+    }
+    
+}
+
+@media all and (max-width: 520px) {
+    .place {
         grid-template-columns: repeat(1, minmax(min-content, max-content));
         grid-row-gap: 32px;
         padding-bottom: 50px;
