--- a/bloks/places/places.css
+++ b/bloks/places/places.css
@@ -1,20 +1,28 @@
 .places {
     max-width: 984px;
-    padding: 92px 148px 92px 148px;
+    margin: 0 auto;
+    padding: 92px 0px;
 }
 
 @media all and (max-width: 1024px) {
     .places {
-        max-width: 928px;
-        padding: 92px 48px 92px 48px;
+        max-width: 90.625vw;
     }
     
 }
 
 @media all and (max-width: 768px) {
     .places {
-        max-width: 720px;
-        padding: 88px 24px 90px 24px;
+        max-width: 93.75vw;
+        
+    }
+    
+}
+
+@media all and (max-width: 700px) {
+    .places {
+        max-width: 96vw;
+        
     }
     
 }
