--- a/pages/index.css
+++ b/pages/index.css
@@ -4,6 +4,7 @@
 @import url(../bloсks/page/page.css);
 @import url(../bloсks/header/header.css);
 @import url(../bloсks/header/__logo/header__logo.css);
+@import url(../bloсks/header/__lang-links/header__lang-links.css);
 @import url(../bloсks/header/__lang-link/header__lang-link.css);
 @import url(../bloсks/header/__lang-link/_active/header__lang-link_active.css);
 @import url(../bloсks/lead/lead.css);
